# solana-invoke

./: Cargo.toml  README.md
.github/workflows/: ci.yml
invoke/: Cargo.toml
invoke/src/: lib.rs  stable_instruction_borrowed.rs
test-program/: Cargo.toml
test-program/src/: lib.rs
