[workspace]
members = ["invoke", "test-program"]
resolver = "2"

[workspace.dependencies]
solana-account-info = "3.0.0"
solana-cpi = "3.0.0"
solana-define-syscall = "3.0.0"
solana-instruction = "3.0.0"
solana-invoke = { path = "./invoke" }
solana-msg = "3.0.0"
solana-program-entrypoint = "3.1.0"
solana-pubkey = "3.0.0"
solana-sdk-ids = "2.0"
solana-stable-layout = { version = "3.0.0" }
solana-system-interface = { version = "2.0.0", features = ["bincode"] }
solana-sysvar = "3.0.0"
