[workspace]
members = ["invoke", "test-program"]
resolver = "2"

[workspace.dependencies]
solana-account-info = "2"
solana-cpi = "2"
solana-define-syscall = "2"
solana-instruction = "2"
solana-invoke = { path = "./invoke" }
solana-msg = "2"
solana-program-entrypoint = "2"
solana-pubkey = "2"
solana-sdk-ids = "2.0"
solana-stable-layout = { version = "2" }
solana-system-interface = { version = "1", features = ["bincode"] }
solana-sysvar = "2"
