[workspace]
members = ["invoke", "test-program"]
resolver = "2"

[workspace.dependencies]
solana-account-info = "3"
solana-cpi = "3"
solana-define-syscall = "3"
solana-instruction = "3"
solana-invoke = { path = "./invoke" }
solana-msg = "3"
solana-program-entrypoint = "3"
solana-pubkey = "3"
solana-sdk-ids = "3"
solana-stable-layout = { version = "3" }
solana-system-interface = { version = "2", features = ["bincode"] }
solana-sysvar = "3"
