[package]
name = "test-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "triple_transfer"

[dependencies]
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-define-syscall = { workspace = true }
solana-invoke = { workspace = true }
solana-msg = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-pubkey = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-sysvar = { workspace = true }

[dev-dependencies]
solana-program-test = "3"
solana-sdk = "3"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
